feat: add issue join token (#277)
* feat: add IssueJoinToken API for cluster registration and implement related tests

* feat: Add tenant operator and link service join token functionality

* fix: correct misspelling in comment

* Remove tenant-operator Kubernetes manifests including ServiceAccount, Roles, ClusterRoles, RoleBindings, ClusterRoleBindings, Services, Deployments, Certificates, Issuers, and WebhookConfigurations.

* fix: update kube-openapi dependency version and remove unused structured-merge-diff/v7

---------
